# CatMatcher

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml  requirements.txt  run_Nmatcher.py
CatMatcher/: run_Nmatcher.py  run_matcher.py  run_pairmatcher.py
CatMatcher/stilts_wrapper/: match_configurator.py  matcher.py  shell_helper.py
CatMatcher/utils/: helpers.py
Data/example_files/: Disks_NGC2024.csv  Megeath_YSOs.csv  Nemesis_YSOs_OrionB.csv
Data/matches/: matched.csv
Data/scripts/OrionB_disks_YSOs/: N_match_commands.txt  stilts_execute.sh
Tests/: test_match_configurator.py
docs/: conf.py  index.rst  stilts_wrapper.rst
docs/api/: match_configurator.rst  matcher.rst  shell_helper.rst
docs/tutorials/: Quickstart.rst  quickstart.ipynb
src/CatMatcher/: matcher.py
stilts_wrapper/: match_configurator.py  matcher.py
tests/: test_match_configurator.py
